[gd_scene load_steps=12 format=3 uid="uid://c7bell358actp"]

[ext_resource type="PackedScene" uid="uid://d2ruwrsuqo2ci" path="res://scenes/player.tscn" id="1_2fq5x"]
[ext_resource type="Script" path="res://scenes/world.gd" id="1_t6xi8"]
[ext_resource type="PackedScene" uid="uid://oax5esey1uli" path="res://scenes/tile_map.tscn" id="2_fshh4"]
[ext_resource type="PackedScene" uid="uid://wf4ja47xob03" path="res://scenes/jump_pad.tscn" id="3_kk8ks"]
[ext_resource type="PackedScene" uid="uid://dodsiqbc0pc2x" path="res://scenes/saw.tscn" id="4_i0dju"]
[ext_resource type="PackedScene" uid="uid://bfxfrqrn8w5xl" path="res://scenes/spike_ball.tscn" id="5_33wmc"]
[ext_resource type="PackedScene" uid="uid://c7cxmyi3xa73x" path="res://scenes/bg.tscn" id="7_rvvk2"]
[ext_resource type="PackedScene" uid="uid://c3hw83np1aosx" path="res://scenes/start.tscn" id="8_5aido"]
[ext_resource type="PackedScene" uid="uid://mcyir3i2thfa" path="res://scenes/exit.tscn" id="9_v6055"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbevj"]
size = Vector2(697, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_voc0n"]
size = Vector2(1545, 20)

[node name="World" type="Node2D"]
script = ExtResource("1_t6xi8")

[node name="TileMap" parent="." instance=ExtResource("2_fshh4")]

[node name="Player" parent="." instance=ExtResource("1_2fq5x")]
position = Vector2(190, 86)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(14, -306)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(132.5, 158)
shape = SubResource("RectangleShape2D_gbevj")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_left = -216.0
offset_top = 148.0
offset_right = 482.0
offset_bottom = 168.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="DeathZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(207, 265)
shape = SubResource("RectangleShape2D_voc0n")

[node name="JumpPad" parent="." instance=ExtResource("3_kk8ks")]
position = Vector2(301, 147)

[node name="Saw" parent="." instance=ExtResource("4_i0dju")]
position = Vector2(366, 148)

[node name="SpikeBall" parent="." instance=ExtResource("5_33wmc")]
position = Vector2(47, 147)

[node name="BG" parent="." instance=ExtResource("7_rvvk2")]

[node name="Start" parent="." instance=ExtResource("8_5aido")]
position = Vector2(115, 129)

[node name="Exit" parent="." instance=ExtResource("9_v6055")]
position = Vector2(242, 128)

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="body_entered" from="JumpPad" to="." method="_on_jump_pad_body_entered"]
[connection signal="hit_player" from="Saw" to="." method="_on_trap_hit_player"]
[connection signal="hit_player" from="SpikeBall" to="." method="_on_trap_hit_player"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
